--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,13 @@
-asgiref==3.2.7
+asgiref==3.5.0
 beautifulsoup4==4.9.0
 certifi==2020.4.5.1
 chardet==3.0.4
-Django==3.0.7
+charset-normalizer==2.0.12
+Django==4.0.3
 idna==2.9
-lxml==4.6.2
+lxml==4.8.0
 pytz==2020.1
-requests==2.23.0
+requests==2.27.1
 soupsieve==2.0
 sqlparse==0.3.1
 urllib3==1.25.9
